// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bins actual cycles by day: cycles binned by day and part 1`] = `
Immutable.Map {
  Immutable.Record {
    "day": 2018-03-05T06:00:00.000Z,
    "part": "partx-3",
  }: 1,
  Immutable.Record {
    "day": 2018-03-04T06:00:00.000Z,
    "part": "partd-0",
  }: 1,
  Immutable.Record {
    "day": 2018-03-04T06:00:00.000Z,
    "part": "part2-2",
  }: 1,
}
`;

exports[`bins actual cycles by day: cycles binned by day and station 1`] = `
Immutable.Map {
  Immutable.Record {
    "day": 2018-03-05T06:00:00.000Z,
    "station": "L/U #1",
  }: 0.0001,
  Immutable.Record {
    "day": 2018-03-05T06:00:00.000Z,
    "station": "MC #1",
  }: 0.0005,
  Immutable.Record {
    "day": 2018-03-05T06:00:00.000Z,
    "station": "L/U #2",
  }: 0.00005,
  Immutable.Record {
    "day": 2018-03-04T06:00:00.000Z,
    "station": "L/U #1",
  }: 0.0002,
  Immutable.Record {
    "day": 2018-03-04T06:00:00.000Z,
    "station": "MC #1",
  }: 0.0005833333333333333,
  Immutable.Record {
    "day": 2018-03-04T06:00:00.000Z,
    "station": "L/U #2",
  }: 0.0001,
}
`;

exports[`computes station oee: station minutes for last week 1`] = `
Immutable.Map {
  "L/U #1": 12,
  "MC #1": 50,
  "L/U #2": 6,
}
`;

exports[`loads a specific month for analysis: selected month with 27 days ago, 2 days ago, and today 1`] = `
Object {
  "cycles": Object {
    "by_pallet": Immutable.Map {
      "paltt": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-06T09:45:05.000Z,
          "y": 44,
        },
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-31T09:51:10.000Z,
          "y": 44,
        },
      ],
      "palss": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-02T09:57:05.000Z,
          "y": 44,
        },
      ],
    },
    "by_part_then_stat": Immutable.Map {
      "partCCC-3": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "partCCC",
            "process": 3,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-01-06T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 18,
            "completed": false,
            "isLabor": false,
            "part": "partCCC",
            "process": 3,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-01-06T09:30:05.000Z,
            "y": 18,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "partCCC",
            "process": 3,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-01-06T09:40:05.000Z,
            "y": 3,
          },
        ],
      },
      "partBBB-2": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "partBBB",
            "process": 2,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-01-31T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 24,
            "completed": false,
            "isLabor": false,
            "part": "partBBB",
            "process": 2,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-01-31T09:36:05.000Z,
            "y": 24,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "partBBB",
            "process": 2,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-01-31T09:46:05.000Z,
            "y": 3,
          },
        ],
      },
      "partAAA-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "partAAA",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-02-02T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 30,
            "completed": false,
            "isLabor": false,
            "part": "partAAA",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-02-02T09:42:05.000Z,
            "y": 30,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "partAAA",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-02-02T09:52:05.000Z,
            "y": 3,
          },
        ],
      },
    },
    "estimatedCycleTimes": Immutable.Map {
      "partCCC-3": Immutable.Map {
        "MC": Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 18,
          "medianMinutes": 18,
        },
      },
      "partBBB-2": Immutable.Map {
        "MC": Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 24,
          "medianMinutes": 24,
        },
      },
      "partAAA-1": Immutable.Map {
        "MC": Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 30,
          "medianMinutes": 30,
        },
      },
    },
    "station_groups": Immutable.Set [
      "L/U",
      "MC",
    ],
  },
  "inspection": Object {
    "by_part": Immutable.Map {
      Immutable.Record {
        "part": "partCCC",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 15339,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 15339,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-06T09:45:05.000Z,
        },
        Object {
          "materialID": 15339,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-01-06T09:52:05.000Z,
        },
      ],
      Immutable.Record {
        "part": "partBBB",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 49400,
          "result": Object {
            "toInspect": true,
            "type": 1,
          },
          "time": 2018-01-31T09:51:05.000Z,
        },
        Object {
          "materialID": 49400,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 49400,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-31T09:51:10.000Z,
        },
        Object {
          "materialID": 49400,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-01-31T09:58:10.000Z,
        },
      ],
      Immutable.Record {
        "part": "partAAA",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 46081,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 46081,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-02T09:57:05.000Z,
        },
        Object {
          "materialID": 46081,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-02-02T10:04:05.000Z,
        },
      ],
    },
  },
  "sim_use": Object {
    "production": Immutable.List [],
    "station_use": Immutable.List [],
  },
}
`;

exports[`processes new log events into last30: last30 with 2 days ago, today, and 6 days from now 1`] = `
Object {
  "cycles": Object {
    "by_pallet": Immutable.Map {
      "palbb": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-31T09:51:05.000Z,
          "y": 44,
        },
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-02T09:57:05.000Z,
          "y": 44,
        },
      ],
      "palcc": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-08T09:39:05.000Z,
          "y": 44,
        },
      ],
    },
    "by_part_then_stat": Immutable.Map {
      "part222-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part222",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-01-31T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 24,
            "completed": false,
            "isLabor": false,
            "part": "part222",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-01-31T09:36:05.000Z,
            "y": 24,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part222",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-01-31T09:46:05.000Z,
            "y": 3,
          },
        ],
      },
      "part111-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-02-02T09:09:05.000Z,
            "y": 6,
          },
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-02-08T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 30,
            "completed": false,
            "isLabor": false,
            "part": "part111",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-02-02T09:42:05.000Z,
            "y": 30,
          },
          Object {
            "active": 12,
            "completed": false,
            "isLabor": false,
            "part": "part111",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-02-08T09:24:05.000Z,
            "y": 12,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-02-02T09:52:05.000Z,
            "y": 3,
          },
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-02-08T09:34:05.000Z,
            "y": 3,
          },
        ],
      },
    },
    "estimatedCycleTimes": Immutable.Map {
      "part222-2": Immutable.Map {
        "MC": Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 18,
          "medianMinutes": 18,
        },
      },
      "part222-1": Immutable.Map {
        "MC": Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 24,
          "medianMinutes": 24,
        },
      },
      "part111-1": Immutable.Map {
        "MC": Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 30,
          "medianMinutes": 30,
        },
      },
    },
    "station_groups": Immutable.Set [
      "L/U",
      "MC",
    ],
  },
  "inspection": Object {
    "by_part": Immutable.Map {
      Immutable.Record {
        "part": "part222",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 99502,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 99502,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-31T09:51:05.000Z,
        },
        Object {
          "materialID": 99502,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-01-31T09:58:05.000Z,
        },
      ],
      Immutable.Record {
        "part": "part111",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 70329,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 70329,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-02T09:57:05.000Z,
        },
        Object {
          "materialID": 70329,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-02-02T10:04:05.000Z,
        },
        Object {
          "materialID": 43888,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 43888,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-08T09:39:05.000Z,
        },
        Object {
          "materialID": 43888,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-02-08T09:46:05.000Z,
        },
      ],
    },
  },
  "latest_log_counter": 8,
  "latest_scheduleId": undefined,
  "mat_summary": Object {
    "inspTypes": HashSet {
      "hamt": Map {
        "_config": Object {
          "hash": [Function],
          "keyEq": [Function],
        },
        "_edit": 1,
        "_editable": 0,
        "_root": Object {
          "_modify": [Function],
          "edit": NaN,
          "hash": 70808079,
          "key": "Insp1",
          "type": 1,
          "value": "Insp1",
        },
        "_size": 1,
      },
    },
    "matsById": HashMap {
      "hamt": Map {
        "_config": Object {
          "hash": [Function],
          "keyEq": [Function],
        },
        "_edit": 1,
        "_editable": 0,
        "_root": Object {
          "_modify": [Function],
          "children": Array [
            Object {
              "_modify": [Function],
              "edit": NaN,
              "hash": 43888,
              "key": 43888,
              "type": 1,
              "value": Object {
                "completedInspections": Object {
                  "Insp1": 2018-02-08T09:46:05.000Z,
                },
                "completed_procs": Array [
                  1,
                ],
                "jobUnique": "uniqv",
                "last_event": 2018-02-08T09:46:05.000Z,
                "materialID": 43888,
                "partName": "part111",
                "signaledInspections": Array [
                  "Insp1",
                ],
              },
            },
            Object {
              "_modify": [Function],
              "edit": 1,
              "hash": 70329,
              "key": 70329,
              "type": 1,
              "value": Object {
                "completedInspections": Object {
                  "Insp1": 2018-02-02T10:04:05.000Z,
                },
                "completed_procs": Array [
                  1,
                ],
                "jobUnique": "uniqi",
                "last_event": 2018-02-02T10:04:05.000Z,
                "materialID": 70329,
                "partName": "part111",
                "signaledInspections": Array [
                  "Insp1",
                ],
              },
            },
          ],
          "edit": NaN,
          "mask": 33619968,
          "type": 3,
        },
        "_size": 2,
      },
    },
  },
  "most_recent_10_events": Vector {
    "_list": List {
      "bits": 640,
      "length": 10,
      "offset": 0,
      "prefix": Array [
        Object {
          "active": "00:00:00",
          "counter": 7,
          "elapsed": "00:00:00",
          "endUTC": 2018-02-08T09:46:05.000Z,
          "loc": "InspectionComplete",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "face7",
              "id": 43888,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqv",
            },
          ],
          "pal": "",
          "program": "Insp1",
          "result": "true",
          "startofcycle": false,
          "type": "InspectionResult",
        },
        Object {
          "active": "-00:01:00",
          "counter": 7,
          "elapsed": "00:44:00",
          "endUTC": 2018-02-08T09:39:05.000Z,
          "loc": "L/U",
          "locnum": 2,
          "material": Array [],
          "pal": "palcc",
          "program": "",
          "result": "PalletCycle",
          "startofcycle": false,
          "type": "PalletCycle",
        },
        Object {
          "active": "00:00:00",
          "counter": 6,
          "details": Object {
            "ActualPath": "[{\\"MaterialID\\":43888,\\"Process\\":1,\\"Pallet\\":\\"6\\",\\"LoadStation\\":1,\\"Stops\\":[{\\"StationName\\":\\"MC\\",\\"StationNum\\":4}],\\"UnloadStation\\":2}]",
            "InspectionType": "Insp1",
          },
          "elapsed": "00:00:00",
          "endUTC": 2018-02-08T09:39:05.000Z,
          "loc": "Inspection",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "face7",
              "id": 43888,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqv",
            },
          ],
          "pal": "",
          "program": "theprogramshouldbeignored",
          "result": "True",
          "startofcycle": false,
          "type": "Inspection",
        },
        Object {
          "active": "00:03:00",
          "counter": 5,
          "elapsed": "00:03:00",
          "endUTC": 2018-02-08T09:34:05.000Z,
          "loc": "L/U",
          "locnum": 2,
          "material": Array [
            Object {
              "face": "face7",
              "id": 43888,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqv",
            },
          ],
          "pal": "palcc",
          "program": "UNLOAD",
          "result": "UNLOAD",
          "startofcycle": false,
          "type": "LoadUnloadCycle",
        },
        Object {
          "active": "00:03:00",
          "counter": 4,
          "elapsed": "00:03:00",
          "endUTC": 2018-02-08T09:31:05.000Z,
          "loc": "L/U",
          "locnum": 2,
          "material": Array [
            Object {
              "face": "face7",
              "id": 43888,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqv",
            },
          ],
          "pal": "palcc",
          "program": "",
          "result": "",
          "startofcycle": true,
          "type": "LoadUnloadCycle",
        },
        Object {
          "active": "00:12:00",
          "counter": 3,
          "elapsed": "00:12:00",
          "endUTC": 2018-02-08T09:24:05.000Z,
          "loc": "MC",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "face7",
              "id": 43888,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqv",
            },
          ],
          "pal": "palcc",
          "program": "progi",
          "result": "",
          "startofcycle": false,
          "type": "MachineCycle",
        },
        Object {
          "active": "00:12:00",
          "counter": 2,
          "elapsed": "00:12:00",
          "endUTC": 2018-02-08T09:12:05.000Z,
          "loc": "MC",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "face7",
              "id": 43888,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqv",
            },
          ],
          "pal": "palcc",
          "program": "",
          "result": "",
          "startofcycle": true,
          "type": "MachineCycle",
        },
        Object {
          "active": "00:06:00",
          "counter": 1,
          "elapsed": "00:06:00",
          "endUTC": 2018-02-08T09:09:05.000Z,
          "loc": "L/U",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "face7",
              "id": 43888,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqv",
            },
          ],
          "pal": "palcc",
          "program": "LOAD",
          "result": "LOAD",
          "startofcycle": false,
          "type": "LoadUnloadCycle",
        },
        Object {
          "active": "00:06:00",
          "counter": 0,
          "elapsed": "00:06:00",
          "endUTC": 2018-02-08T09:03:05.000Z,
          "loc": "L/U",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "face7",
              "id": 43888,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqv",
            },
          ],
          "pal": "palcc",
          "program": "",
          "result": "",
          "startofcycle": true,
          "type": "LoadUnloadCycle",
        },
        Object {
          "active": "00:00:00",
          "counter": 7,
          "elapsed": "00:00:00",
          "endUTC": 2018-02-02T10:04:05.000Z,
          "loc": "InspectionComplete",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "face4",
              "id": 70329,
              "numproc": 4,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqi",
            },
          ],
          "pal": "",
          "program": "Insp1",
          "result": "true",
          "startofcycle": false,
          "type": "InspectionResult",
        },
      ],
      "root": undefined,
      "suffix": Array [
        0,
      ],
    },
  },
  "sim_use": Object {
    "production": Immutable.List [],
    "station_use": Immutable.List [],
  },
}
`;

exports[`processes new log events into last30: last30 with 27 days ago, 2 days ago, and today 1`] = `
Object {
  "cycles": Object {
    "by_pallet": Immutable.Map {
      "palaa": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-06T09:45:10.000Z,
          "y": 44,
        },
      ],
      "palbb": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-31T09:51:05.000Z,
          "y": 44,
        },
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-02T09:57:05.000Z,
          "y": 44,
        },
      ],
    },
    "by_part_then_stat": Immutable.Map {
      "part222-2": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part222",
            "process": 2,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-01-06T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 18,
            "completed": false,
            "isLabor": false,
            "part": "part222",
            "process": 2,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-01-06T09:30:05.000Z,
            "y": 18,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part222",
            "process": 2,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-01-06T09:40:05.000Z,
            "y": 3,
          },
        ],
      },
      "part222-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part222",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-01-31T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 24,
            "completed": false,
            "isLabor": false,
            "part": "part222",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-01-31T09:36:05.000Z,
            "y": 24,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part222",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-01-31T09:46:05.000Z,
            "y": 3,
          },
        ],
      },
      "part111-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-02-02T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 30,
            "completed": false,
            "isLabor": false,
            "part": "part111",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-02-02T09:42:05.000Z,
            "y": 30,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-02-02T09:52:05.000Z,
            "y": 3,
          },
        ],
      },
    },
    "estimatedCycleTimes": Immutable.Map {
      "part222-2": Immutable.Map {
        "MC": Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 18,
          "medianMinutes": 18,
        },
      },
      "part222-1": Immutable.Map {
        "MC": Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 24,
          "medianMinutes": 24,
        },
      },
      "part111-1": Immutable.Map {
        "MC": Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 30,
          "medianMinutes": 30,
        },
      },
    },
    "station_groups": Immutable.Set [
      "L/U",
      "MC",
    ],
  },
  "inspection": Object {
    "by_part": Immutable.Map {
      Immutable.Record {
        "part": "part222",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 86489,
          "result": Object {
            "toInspect": true,
            "type": 1,
          },
          "time": 2018-01-06T09:45:05.000Z,
        },
        Object {
          "materialID": 86489,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 86489,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-06T09:45:10.000Z,
        },
        Object {
          "materialID": 86489,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-01-06T09:52:10.000Z,
        },
        Object {
          "materialID": 99502,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 99502,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-31T09:51:05.000Z,
        },
        Object {
          "materialID": 99502,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-01-31T09:58:05.000Z,
        },
      ],
      Immutable.Record {
        "part": "part111",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 70329,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 70329,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-02T09:57:05.000Z,
        },
        Object {
          "materialID": 70329,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-02-02T10:04:05.000Z,
        },
      ],
    },
  },
  "latest_log_counter": 8,
  "latest_scheduleId": undefined,
  "mat_summary": Object {
    "inspTypes": HashSet {
      "hamt": Map {
        "_config": Object {
          "hash": [Function],
          "keyEq": [Function],
        },
        "_edit": 1,
        "_editable": 0,
        "_root": Object {
          "_modify": [Function],
          "edit": NaN,
          "hash": 70808079,
          "key": "Insp1",
          "type": 1,
          "value": "Insp1",
        },
        "_size": 1,
      },
    },
    "matsById": HashMap {
      "hamt": Map {
        "_config": Object {
          "hash": [Function],
          "keyEq": [Function],
        },
        "_edit": 0,
        "_editable": 0,
        "_root": Object {
          "_modify": [Function],
          "children": Array [
            Object {
              "_modify": [Function],
              "edit": NaN,
              "hash": 99502,
              "key": 99502,
              "type": 1,
              "value": Object {
                "completedInspections": Object {
                  "Insp1": 2018-01-31T09:58:05.000Z,
                },
                "completed_procs": Array [
                  1,
                ],
                "jobUnique": "uniqt",
                "last_event": 2018-01-31T09:58:05.000Z,
                "materialID": 99502,
                "partName": "part222",
                "signaledInspections": Array [
                  "Insp1",
                ],
              },
            },
            Object {
              "_modify": [Function],
              "children": Array [
                Object {
                  "_modify": [Function],
                  "edit": NaN,
                  "hash": 86489,
                  "key": 86489,
                  "type": 1,
                  "value": Object {
                    "completedInspections": Object {
                      "Insp1": 2018-01-06T09:52:10.000Z,
                    },
                    "completed_procs": Array [
                      2,
                    ],
                    "jobUnique": "uniqh",
                    "last_event": 2018-01-06T09:52:10.000Z,
                    "materialID": 86489,
                    "partName": "part222",
                    "signaledInspections": Array [
                      "Insp1",
                      "Insp1",
                    ],
                  },
                },
                Object {
                  "_modify": [Function],
                  "edit": NaN,
                  "hash": 70329,
                  "key": 70329,
                  "type": 1,
                  "value": Object {
                    "completedInspections": Object {
                      "Insp1": 2018-02-02T10:04:05.000Z,
                    },
                    "completed_procs": Array [
                      1,
                    ],
                    "jobUnique": "uniqi",
                    "last_event": 2018-02-02T10:04:05.000Z,
                    "materialID": 70329,
                    "partName": "part111",
                    "signaledInspections": Array [
                      "Insp1",
                    ],
                  },
                },
              ],
              "edit": NaN,
              "mask": 2113536,
              "type": 3,
            },
          ],
          "edit": NaN,
          "mask": 33570816,
          "type": 3,
        },
        "_size": 3,
      },
    },
  },
  "most_recent_10_events": Vector {
    "_list": List {
      "bits": 640,
      "length": 10,
      "offset": 0,
      "prefix": Array [
        Object {
          "active": "00:00:00",
          "counter": 7,
          "elapsed": "00:00:00",
          "endUTC": 2018-02-02T10:04:05.000Z,
          "loc": "InspectionComplete",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "face4",
              "id": 70329,
              "numproc": 4,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqi",
            },
          ],
          "pal": "",
          "program": "Insp1",
          "result": "true",
          "startofcycle": false,
          "type": "InspectionResult",
        },
        Object {
          "active": "-00:01:00",
          "counter": 7,
          "elapsed": "00:44:00",
          "endUTC": 2018-02-02T09:57:05.000Z,
          "loc": "L/U",
          "locnum": 2,
          "material": Array [],
          "pal": "palbb",
          "program": "",
          "result": "PalletCycle",
          "startofcycle": false,
          "type": "PalletCycle",
        },
        Object {
          "active": "00:00:00",
          "counter": 6,
          "details": Object {
            "ActualPath": "[{\\"MaterialID\\":70329,\\"Process\\":1,\\"Pallet\\":\\"6\\",\\"LoadStation\\":1,\\"Stops\\":[{\\"StationName\\":\\"MC\\",\\"StationNum\\":4}],\\"UnloadStation\\":2}]",
            "InspectionType": "Insp1",
          },
          "elapsed": "00:00:00",
          "endUTC": 2018-02-02T09:57:05.000Z,
          "loc": "Inspection",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "face4",
              "id": 70329,
              "numproc": 4,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqi",
            },
          ],
          "pal": "",
          "program": "theprogramshouldbeignored",
          "result": "True",
          "startofcycle": false,
          "type": "Inspection",
        },
        Object {
          "active": "00:03:00",
          "counter": 5,
          "elapsed": "00:03:00",
          "endUTC": 2018-02-02T09:52:05.000Z,
          "loc": "L/U",
          "locnum": 2,
          "material": Array [
            Object {
              "face": "face4",
              "id": 70329,
              "numproc": 4,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqi",
            },
          ],
          "pal": "palbb",
          "program": "UNLOAD",
          "result": "UNLOAD",
          "startofcycle": false,
          "type": "LoadUnloadCycle",
        },
        Object {
          "active": "00:03:00",
          "counter": 4,
          "elapsed": "00:03:00",
          "endUTC": 2018-02-02T09:49:05.000Z,
          "loc": "L/U",
          "locnum": 2,
          "material": Array [
            Object {
              "face": "face4",
              "id": 70329,
              "numproc": 4,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqi",
            },
          ],
          "pal": "palbb",
          "program": "",
          "result": "",
          "startofcycle": true,
          "type": "LoadUnloadCycle",
        },
        Object {
          "active": "00:30:00",
          "counter": 3,
          "elapsed": "00:30:00",
          "endUTC": 2018-02-02T09:42:05.000Z,
          "loc": "MC",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "face4",
              "id": 70329,
              "numproc": 4,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqi",
            },
          ],
          "pal": "palbb",
          "program": "proga",
          "result": "",
          "startofcycle": false,
          "type": "MachineCycle",
        },
        Object {
          "active": "00:30:00",
          "counter": 2,
          "elapsed": "00:30:00",
          "endUTC": 2018-02-02T09:12:05.000Z,
          "loc": "MC",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "face4",
              "id": 70329,
              "numproc": 4,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqi",
            },
          ],
          "pal": "palbb",
          "program": "",
          "result": "",
          "startofcycle": true,
          "type": "MachineCycle",
        },
        Object {
          "active": "00:06:00",
          "counter": 1,
          "elapsed": "00:06:00",
          "endUTC": 2018-02-02T09:09:05.000Z,
          "loc": "L/U",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "face4",
              "id": 70329,
              "numproc": 4,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqi",
            },
          ],
          "pal": "palbb",
          "program": "LOAD",
          "result": "LOAD",
          "startofcycle": false,
          "type": "LoadUnloadCycle",
        },
        Object {
          "active": "00:06:00",
          "counter": 0,
          "elapsed": "00:06:00",
          "endUTC": 2018-02-02T09:03:05.000Z,
          "loc": "L/U",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "face4",
              "id": 70329,
              "numproc": 4,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqi",
            },
          ],
          "pal": "palbb",
          "program": "",
          "result": "",
          "startofcycle": true,
          "type": "LoadUnloadCycle",
        },
        Object {
          "active": "00:00:00",
          "counter": 7,
          "elapsed": "00:00:00",
          "endUTC": 2018-01-31T09:58:05.000Z,
          "loc": "InspectionComplete",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "facev",
              "id": 99502,
              "numproc": 0,
              "part": "part222",
              "proc": 1,
              "uniq": "uniqt",
            },
          ],
          "pal": "",
          "program": "Insp1",
          "result": "true",
          "startofcycle": false,
          "type": "InspectionResult",
        },
      ],
      "root": undefined,
      "suffix": Array [
        0,
      ],
    },
  },
  "sim_use": Object {
    "production": Immutable.List [],
    "station_use": Immutable.List [],
  },
}
`;

exports[`refreshes new events into last30: last30 with 2 days ago, today, and 6 days from now 1`] = `
Object {
  "cycles": Object {
    "by_pallet": Immutable.Map {
      "palbb": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-31T09:51:10.000Z,
          "y": 44,
        },
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-02T09:57:10.000Z,
          "y": 44,
        },
      ],
      "palcc": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-08T09:39:10.000Z,
          "y": 44,
        },
      ],
    },
    "by_part_then_stat": Immutable.Map {
      "part222-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part222",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-01-31T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 24,
            "completed": false,
            "isLabor": false,
            "part": "part222",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-01-31T09:36:05.000Z,
            "y": 24,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part222",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-01-31T09:46:05.000Z,
            "y": 3,
          },
        ],
      },
      "part111-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-02-02T09:09:05.000Z,
            "y": 6,
          },
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-02-08T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 30,
            "completed": false,
            "isLabor": false,
            "part": "part111",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-02-02T09:42:05.000Z,
            "y": 30,
          },
          Object {
            "active": 12,
            "completed": false,
            "isLabor": false,
            "part": "part111",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-02-08T09:24:05.000Z,
            "y": 12,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-02-02T09:52:05.000Z,
            "y": 3,
          },
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-02-08T09:34:05.000Z,
            "y": 3,
          },
        ],
      },
    },
    "estimatedCycleTimes": Immutable.Map {
      "part222-2": Immutable.Map {
        "MC": Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 18,
          "medianMinutes": 18,
        },
      },
      "part222-1": Immutable.Map {
        "MC": Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 24,
          "medianMinutes": 24,
        },
      },
      "part111-1": Immutable.Map {
        "MC": Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 30,
          "medianMinutes": 30,
        },
      },
    },
    "station_groups": Immutable.Set [
      "L/U",
      "MC",
    ],
  },
  "inspection": Object {
    "by_part": Immutable.Map {
      Immutable.Record {
        "part": "part222",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 90816,
          "result": Object {
            "toInspect": true,
            "type": 1,
          },
          "time": 2018-01-31T09:51:05.000Z,
        },
        Object {
          "materialID": 90816,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 90816,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-31T09:51:10.000Z,
        },
        Object {
          "materialID": 90816,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-01-31T09:58:10.000Z,
        },
      ],
      Immutable.Record {
        "part": "part111",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 90793,
          "result": Object {
            "toInspect": true,
            "type": 1,
          },
          "time": 2018-02-02T09:57:05.000Z,
        },
        Object {
          "materialID": 90793,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 90793,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-02T09:57:10.000Z,
        },
        Object {
          "materialID": 90793,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-02-02T10:04:10.000Z,
        },
        Object {
          "materialID": 80572,
          "result": Object {
            "toInspect": true,
            "type": 1,
          },
          "time": 2018-02-08T09:39:05.000Z,
        },
        Object {
          "materialID": 80572,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 80572,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-08T09:39:10.000Z,
        },
        Object {
          "materialID": 80572,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-02-08T09:46:10.000Z,
        },
      ],
    },
  },
  "latest_log_counter": 8,
  "latest_scheduleId": undefined,
  "mat_summary": Object {
    "inspTypes": HashSet {
      "hamt": Map {
        "_config": Object {
          "hash": [Function],
          "keyEq": [Function],
        },
        "_edit": 1,
        "_editable": 0,
        "_root": Object {
          "_modify": [Function],
          "edit": NaN,
          "hash": 70808079,
          "key": "Insp1",
          "type": 1,
          "value": "Insp1",
        },
        "_size": 1,
      },
    },
    "matsById": HashMap {
      "hamt": Map {
        "_config": Object {
          "hash": [Function],
          "keyEq": [Function],
        },
        "_edit": 1,
        "_editable": 0,
        "_root": Object {
          "_modify": [Function],
          "children": Array [
            Object {
              "_modify": [Function],
              "edit": 1,
              "hash": 90793,
              "key": 90793,
              "type": 1,
              "value": Object {
                "completedInspections": Object {
                  "Insp1": 2018-02-02T10:04:10.000Z,
                },
                "completed_procs": Array [
                  1,
                ],
                "jobUnique": "uniqk",
                "last_event": 2018-02-02T10:04:10.000Z,
                "materialID": 90793,
                "partName": "part111",
                "signaledInspections": Array [
                  "Insp1",
                  "Insp1",
                ],
              },
            },
            Object {
              "_modify": [Function],
              "edit": NaN,
              "hash": 80572,
              "key": 80572,
              "type": 1,
              "value": Object {
                "completedInspections": Object {
                  "Insp1": 2018-02-08T09:46:10.000Z,
                },
                "completed_procs": Array [
                  1,
                ],
                "jobUnique": "uniqz",
                "last_event": 2018-02-08T09:46:10.000Z,
                "materialID": 80572,
                "partName": "part111",
                "signaledInspections": Array [
                  "Insp1",
                  "Insp1",
                ],
              },
            },
          ],
          "edit": NaN,
          "mask": 268435968,
          "type": 3,
        },
        "_size": 2,
      },
    },
  },
  "most_recent_10_events": Vector {
    "_list": List {
      "bits": 640,
      "length": 10,
      "offset": 0,
      "prefix": Array [
        Object {
          "active": "00:00:00",
          "counter": 8,
          "elapsed": "00:00:00",
          "endUTC": 2018-02-08T09:46:10.000Z,
          "loc": "InspectionComplete",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "facen",
              "id": 80572,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqz",
            },
          ],
          "pal": "",
          "program": "Insp1",
          "result": "true",
          "startofcycle": false,
          "type": "InspectionResult",
        },
        Object {
          "active": "-00:01:00",
          "counter": 8,
          "elapsed": "00:44:00",
          "endUTC": 2018-02-08T09:39:10.000Z,
          "loc": "L/U",
          "locnum": 2,
          "material": Array [],
          "pal": "palcc",
          "program": "",
          "result": "PalletCycle",
          "startofcycle": false,
          "type": "PalletCycle",
        },
        Object {
          "active": "00:00:00",
          "counter": 7,
          "details": Object {
            "ActualPath": "[{\\"MaterialID\\":80572,\\"Process\\":1,\\"Pallet\\":\\"6\\",\\"LoadStation\\":1,\\"Stops\\":[{\\"StationName\\":\\"MC\\",\\"StationNum\\":4}],\\"UnloadStation\\":2}]",
            "InspectionType": "Insp1",
          },
          "elapsed": "00:00:00",
          "endUTC": 2018-02-08T09:39:10.000Z,
          "loc": "Inspection",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "facen",
              "id": 80572,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqz",
            },
          ],
          "pal": "",
          "program": "theprogramshouldbeignored",
          "result": "True",
          "startofcycle": false,
          "type": "Inspection",
        },
        Object {
          "active": "00:00:00",
          "counter": 6,
          "elapsed": "00:00:00",
          "endUTC": 2018-02-08T09:39:05.000Z,
          "loc": "Inspection",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "facen",
              "id": 80572,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqz",
            },
          ],
          "pal": "",
          "program": "Insp1",
          "result": "True",
          "startofcycle": false,
          "type": "InspectionForce",
        },
        Object {
          "active": "00:03:00",
          "counter": 5,
          "elapsed": "00:03:00",
          "endUTC": 2018-02-08T09:34:05.000Z,
          "loc": "L/U",
          "locnum": 2,
          "material": Array [
            Object {
              "face": "facen",
              "id": 80572,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqz",
            },
          ],
          "pal": "palcc",
          "program": "UNLOAD",
          "result": "UNLOAD",
          "startofcycle": false,
          "type": "LoadUnloadCycle",
        },
        Object {
          "active": "00:03:00",
          "counter": 4,
          "elapsed": "00:03:00",
          "endUTC": 2018-02-08T09:31:05.000Z,
          "loc": "L/U",
          "locnum": 2,
          "material": Array [
            Object {
              "face": "facen",
              "id": 80572,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqz",
            },
          ],
          "pal": "palcc",
          "program": "",
          "result": "",
          "startofcycle": true,
          "type": "LoadUnloadCycle",
        },
        Object {
          "active": "00:12:00",
          "counter": 3,
          "elapsed": "00:12:00",
          "endUTC": 2018-02-08T09:24:05.000Z,
          "loc": "MC",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "facen",
              "id": 80572,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqz",
            },
          ],
          "pal": "palcc",
          "program": "progn",
          "result": "",
          "startofcycle": false,
          "type": "MachineCycle",
        },
        Object {
          "active": "00:12:00",
          "counter": 2,
          "elapsed": "00:12:00",
          "endUTC": 2018-02-08T09:12:05.000Z,
          "loc": "MC",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "facen",
              "id": 80572,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqz",
            },
          ],
          "pal": "palcc",
          "program": "",
          "result": "",
          "startofcycle": true,
          "type": "MachineCycle",
        },
        Object {
          "active": "00:06:00",
          "counter": 1,
          "elapsed": "00:06:00",
          "endUTC": 2018-02-08T09:09:05.000Z,
          "loc": "L/U",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "facen",
              "id": 80572,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqz",
            },
          ],
          "pal": "palcc",
          "program": "LOAD",
          "result": "LOAD",
          "startofcycle": false,
          "type": "LoadUnloadCycle",
        },
        Object {
          "active": "00:06:00",
          "counter": 0,
          "elapsed": "00:06:00",
          "endUTC": 2018-02-08T09:03:05.000Z,
          "loc": "L/U",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "facen",
              "id": 80572,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqz",
            },
          ],
          "pal": "palcc",
          "program": "",
          "result": "",
          "startofcycle": true,
          "type": "LoadUnloadCycle",
        },
      ],
      "root": undefined,
      "suffix": Array [
        0,
      ],
    },
  },
  "sim_use": Object {
    "production": Immutable.List [],
    "station_use": Immutable.List [],
  },
}
`;

exports[`refreshes new events into last30: last30 with 27 days ago, 2 days ago, and today 1`] = `
Object {
  "cycles": Object {
    "by_pallet": Immutable.Map {
      "palaa": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-06T09:45:10.000Z,
          "y": 44,
        },
      ],
      "palbb": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-31T09:51:10.000Z,
          "y": 44,
        },
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-02T09:57:10.000Z,
          "y": 44,
        },
      ],
    },
    "by_part_then_stat": Immutable.Map {
      "part222-2": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part222",
            "process": 2,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-01-06T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 18,
            "completed": false,
            "isLabor": false,
            "part": "part222",
            "process": 2,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-01-06T09:30:05.000Z,
            "y": 18,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part222",
            "process": 2,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-01-06T09:40:05.000Z,
            "y": 3,
          },
        ],
      },
      "part222-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part222",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-01-31T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 24,
            "completed": false,
            "isLabor": false,
            "part": "part222",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-01-31T09:36:05.000Z,
            "y": 24,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part222",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-01-31T09:46:05.000Z,
            "y": 3,
          },
        ],
      },
      "part111-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-02-02T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 30,
            "completed": false,
            "isLabor": false,
            "part": "part111",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-02-02T09:42:05.000Z,
            "y": 30,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-02-02T09:52:05.000Z,
            "y": 3,
          },
        ],
      },
    },
    "estimatedCycleTimes": Immutable.Map {
      "part222-2": Immutable.Map {
        "MC": Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 18,
          "medianMinutes": 18,
        },
      },
      "part222-1": Immutable.Map {
        "MC": Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 24,
          "medianMinutes": 24,
        },
      },
      "part111-1": Immutable.Map {
        "MC": Object {
          "MAD_aboveMinutes": 0.01,
          "MAD_belowMinutes": 0.01,
          "expectedCycleMinutes": 30,
          "medianMinutes": 30,
        },
      },
    },
    "station_groups": Immutable.Set [
      "L/U",
      "MC",
    ],
  },
  "inspection": Object {
    "by_part": Immutable.Map {
      Immutable.Record {
        "part": "part222",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 76930,
          "result": Object {
            "toInspect": true,
            "type": 1,
          },
          "time": 2018-01-06T09:45:05.000Z,
        },
        Object {
          "materialID": 76930,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 76930,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-06T09:45:10.000Z,
        },
        Object {
          "materialID": 76930,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-01-06T09:52:10.000Z,
        },
        Object {
          "materialID": 90816,
          "result": Object {
            "toInspect": true,
            "type": 1,
          },
          "time": 2018-01-31T09:51:05.000Z,
        },
        Object {
          "materialID": 90816,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 90816,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-31T09:51:10.000Z,
        },
        Object {
          "materialID": 90816,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-01-31T09:58:10.000Z,
        },
      ],
      Immutable.Record {
        "part": "part111",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 90793,
          "result": Object {
            "toInspect": true,
            "type": 1,
          },
          "time": 2018-02-02T09:57:05.000Z,
        },
        Object {
          "materialID": 90793,
          "result": Object {
            "actualPath": Array [
              Object {
                "LoadStation": 1,
                "MaterialID": 90793,
                "Pallet": "6",
                "Process": 1,
                "Stops": Array [
                  Object {
                    "StationName": "MC",
                    "StationNum": 4,
                  },
                ],
                "UnloadStation": 2,
              },
            ],
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-02T09:57:10.000Z,
        },
        Object {
          "materialID": 90793,
          "result": Object {
            "success": true,
            "type": 2,
          },
          "time": 2018-02-02T10:04:10.000Z,
        },
      ],
    },
  },
  "latest_log_counter": 8,
  "latest_scheduleId": undefined,
  "mat_summary": Object {
    "inspTypes": HashSet {
      "hamt": Map {
        "_config": Object {
          "hash": [Function],
          "keyEq": [Function],
        },
        "_edit": 1,
        "_editable": 0,
        "_root": Object {
          "_modify": [Function],
          "edit": NaN,
          "hash": 70808079,
          "key": "Insp1",
          "type": 1,
          "value": "Insp1",
        },
        "_size": 1,
      },
    },
    "matsById": HashMap {
      "hamt": Map {
        "_config": Object {
          "hash": [Function],
          "keyEq": [Function],
        },
        "_edit": 0,
        "_editable": 0,
        "_root": Object {
          "_modify": [Function],
          "children": Array [
            Object {
              "_modify": [Function],
              "edit": NaN,
              "hash": 90816,
              "key": 90816,
              "type": 1,
              "value": Object {
                "completedInspections": Object {
                  "Insp1": 2018-01-31T09:58:10.000Z,
                },
                "completed_procs": Array [
                  1,
                ],
                "jobUnique": "uniq9",
                "last_event": 2018-01-31T09:58:10.000Z,
                "materialID": 90816,
                "partName": "part222",
                "signaledInspections": Array [
                  "Insp1",
                  "Insp1",
                ],
              },
            },
            Object {
              "_modify": [Function],
              "edit": NaN,
              "hash": 76930,
              "key": 76930,
              "type": 1,
              "value": Object {
                "completedInspections": Object {
                  "Insp1": 2018-01-06T09:52:10.000Z,
                },
                "completed_procs": Array [
                  2,
                ],
                "jobUnique": "uniqs",
                "last_event": 2018-01-06T09:52:10.000Z,
                "materialID": 76930,
                "partName": "part222",
                "signaledInspections": Array [
                  "Insp1",
                  "Insp1",
                ],
              },
            },
            Object {
              "_modify": [Function],
              "edit": NaN,
              "hash": 90793,
              "key": 90793,
              "type": 1,
              "value": Object {
                "completedInspections": Object {
                  "Insp1": 2018-02-02T10:04:10.000Z,
                },
                "completed_procs": Array [
                  1,
                ],
                "jobUnique": "uniqk",
                "last_event": 2018-02-02T10:04:10.000Z,
                "materialID": 90793,
                "partName": "part111",
                "signaledInspections": Array [
                  "Insp1",
                  "Insp1",
                ],
              },
            },
          ],
          "edit": NaN,
          "mask": 517,
          "type": 3,
        },
        "_size": 3,
      },
    },
  },
  "most_recent_10_events": Vector {
    "_list": List {
      "bits": 640,
      "length": 10,
      "offset": 0,
      "prefix": Array [
        Object {
          "active": "00:00:00",
          "counter": 8,
          "elapsed": "00:00:00",
          "endUTC": 2018-02-02T10:04:10.000Z,
          "loc": "InspectionComplete",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "faceu",
              "id": 90793,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqk",
            },
          ],
          "pal": "",
          "program": "Insp1",
          "result": "true",
          "startofcycle": false,
          "type": "InspectionResult",
        },
        Object {
          "active": "-00:01:00",
          "counter": 8,
          "elapsed": "00:44:00",
          "endUTC": 2018-02-02T09:57:10.000Z,
          "loc": "L/U",
          "locnum": 2,
          "material": Array [],
          "pal": "palbb",
          "program": "",
          "result": "PalletCycle",
          "startofcycle": false,
          "type": "PalletCycle",
        },
        Object {
          "active": "00:00:00",
          "counter": 7,
          "details": Object {
            "ActualPath": "[{\\"MaterialID\\":90793,\\"Process\\":1,\\"Pallet\\":\\"6\\",\\"LoadStation\\":1,\\"Stops\\":[{\\"StationName\\":\\"MC\\",\\"StationNum\\":4}],\\"UnloadStation\\":2}]",
            "InspectionType": "Insp1",
          },
          "elapsed": "00:00:00",
          "endUTC": 2018-02-02T09:57:10.000Z,
          "loc": "Inspection",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "faceu",
              "id": 90793,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqk",
            },
          ],
          "pal": "",
          "program": "theprogramshouldbeignored",
          "result": "True",
          "startofcycle": false,
          "type": "Inspection",
        },
        Object {
          "active": "00:00:00",
          "counter": 6,
          "elapsed": "00:00:00",
          "endUTC": 2018-02-02T09:57:05.000Z,
          "loc": "Inspection",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "faceu",
              "id": 90793,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqk",
            },
          ],
          "pal": "",
          "program": "Insp1",
          "result": "True",
          "startofcycle": false,
          "type": "InspectionForce",
        },
        Object {
          "active": "00:03:00",
          "counter": 5,
          "elapsed": "00:03:00",
          "endUTC": 2018-02-02T09:52:05.000Z,
          "loc": "L/U",
          "locnum": 2,
          "material": Array [
            Object {
              "face": "faceu",
              "id": 90793,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqk",
            },
          ],
          "pal": "palbb",
          "program": "UNLOAD",
          "result": "UNLOAD",
          "startofcycle": false,
          "type": "LoadUnloadCycle",
        },
        Object {
          "active": "00:03:00",
          "counter": 4,
          "elapsed": "00:03:00",
          "endUTC": 2018-02-02T09:49:05.000Z,
          "loc": "L/U",
          "locnum": 2,
          "material": Array [
            Object {
              "face": "faceu",
              "id": 90793,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqk",
            },
          ],
          "pal": "palbb",
          "program": "",
          "result": "",
          "startofcycle": true,
          "type": "LoadUnloadCycle",
        },
        Object {
          "active": "00:30:00",
          "counter": 3,
          "elapsed": "00:30:00",
          "endUTC": 2018-02-02T09:42:05.000Z,
          "loc": "MC",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "faceu",
              "id": 90793,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqk",
            },
          ],
          "pal": "palbb",
          "program": "prog8",
          "result": "",
          "startofcycle": false,
          "type": "MachineCycle",
        },
        Object {
          "active": "00:30:00",
          "counter": 2,
          "elapsed": "00:30:00",
          "endUTC": 2018-02-02T09:12:05.000Z,
          "loc": "MC",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "faceu",
              "id": 90793,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqk",
            },
          ],
          "pal": "palbb",
          "program": "",
          "result": "",
          "startofcycle": true,
          "type": "MachineCycle",
        },
        Object {
          "active": "00:06:00",
          "counter": 1,
          "elapsed": "00:06:00",
          "endUTC": 2018-02-02T09:09:05.000Z,
          "loc": "L/U",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "faceu",
              "id": 90793,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqk",
            },
          ],
          "pal": "palbb",
          "program": "LOAD",
          "result": "LOAD",
          "startofcycle": false,
          "type": "LoadUnloadCycle",
        },
        Object {
          "active": "00:06:00",
          "counter": 0,
          "elapsed": "00:06:00",
          "endUTC": 2018-02-02T09:03:05.000Z,
          "loc": "L/U",
          "locnum": 1,
          "material": Array [
            Object {
              "face": "faceu",
              "id": 90793,
              "numproc": 3,
              "part": "part111",
              "proc": 1,
              "uniq": "uniqk",
            },
          ],
          "pal": "palbb",
          "program": "",
          "result": "",
          "startofcycle": true,
          "type": "LoadUnloadCycle",
        },
      ],
      "root": undefined,
      "suffix": Array [
        0,
      ],
    },
  },
  "sim_use": Object {
    "production": Immutable.List [],
    "station_use": Immutable.List [],
  },
}
`;
